test/data/pass/eq-neq.z
let a = 0;
while(a != 10) {
	printf("%i\n", a);
	a = a + 1;
}


while(a == 10) {
	printf("%i\n", a);
	a = a - 1;
}
