test/data/fail/bad-return.z
fn add(a: int, b: int) -> int {

	if a == b {
		printf("Hello!\n");
	}
	return "string";
}

printf("%i\n", add(1, 1));
